--- a/glossarylist.html
+++ b/glossarylist.html
@@ -8,7 +8,7 @@
 <body>
     <dl>
         <dt>earth</dt>
-        <dd> hi iam deepan raj from cse</dd>
+        <dd> hi iam ahamed from cse</dd>
     </dl>
 </body>
 </html>
